--- a/.prettierrc
+++ b/.prettierrc
@@ -2,6 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
-  "printWidth": 100,
-  "arrowParens": "avoid"
+  "printWidth": 120,
+  "arrowParens": "avoid",
+  "bracketSameLine": true
 }
