--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.10",
     "cross-env": "^7.0.3",
+    "ioredis": "^5.4.1",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mysql2": "^3.10.2",
