feat:token工具类、权限守卫

--- a/src/application.yaml
+++ b/src/application.yaml
@@ -1,7 +1,10 @@
 app:
   prefix: /
   port: 7001
+  platform-header: platform
 
 jwt:
   secret: mfyhntxmEB1ykNTrD0pWceShkR0wKTa3
   expires: 60
+  header: Authorization
+
