--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.10",
     "cross-env": "^7.0.3",
+    "fastify": "^4.28.1",
     "ioredis": "^5.4.1",
     "ip2region": "^2.3.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mysql2": "^3.10.2",
+    "nanoid": "^5.0.7",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
