feat:集成@nestjs/typeorm feat:完成@Log注解

--- a/src/application.dev.yaml
+++ b/src/application.dev.yaml
@@ -3,7 +3,7 @@ database:
   port: 3302
   username: root
   password: root
-  database: fast-nest-admin
+  database: fast-admin
 
 redis:
   host: 127.0.0.1
