--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.10",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "fastify": "^4.28.1",
+    "fastify-swagger": "^5.2.0",
     "ioredis": "^5.4.1",
     "ip2region": "^2.3.0",
     "js-yaml": "^4.1.0",
